--- a/index.html
+++ b/index.html
@@ -1,12 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cooking Hero</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 </head>
+
 <body>
-    
+    <!-- start header menu -->
+    <div class="header">
+        <nav class="container navbar navbar-expand-lg navbar-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">COOKING HERO</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse flex-row-reverse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav header-tab">
+                        <a class="nav-link active" aria-current="page">Home</a>
+                        <a class="nav-link active">About</a>
+                        <a class="nav-link active">Recipes</a>
+                        <a class="nav-link active">Blog</a>
+                    </div>
+                </div>
+            </div>
+        </nav>
+        <!-- end header menu -->
+        <!-- start search box -->
+        <div class="container searchBox">
+            <nav class="navbar navbar-light">
+                <div class="container-fluid justify-content-center">
+                    <form class="d-flex ">
+                        <input id="searchInput" class="form-control me-2" type="search" placeholder="Search for meal"
+                            aria-label="Search">
+                        <button id="searchBtn" class="btn btn-light" type="submit">Search</button>
+                    </form>
+                </div>
+            </nav>
+        </div>
+    </div>
+    <!-- end search box -->
+    <!-- start menu card -->
+    <div class="container">
+        <h1 id="resultTitle">Your Search Results</h1>
+        <div class="menuBoxs">
+            <div class="card" style="width: 18rem;">
+                <img src="images/1.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5>Vegan Salad Bowl</h5>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- end menu card -->
+
+
+
+
+    <script src="app.js"></script>
 </body>
+
 </html>
