--- a/index.html
+++ b/index.html
@@ -50,16 +50,17 @@
     <!-- end search box -->
     <!-- start menu card -->
     <div class="container">
-        <h1 id="resultTitle">Your Search Results</h1>
+        <h1 id="resultTitle">Your Search Results:</h1>
         <div id="menuBoxs">
 
         </div>
     </div>
     <!-- end menu card -->
+    <!-- start popup -->
+    <div class="container" id="popupIngredient">
 
-
-
-
+    </div>
+    <!-- end popup -->
     <script src="app.js"></script>
 </body>
 
